--- a/sound-board/style.css
+++ b/sound-board/style.css
@@ -21,7 +21,7 @@ body {
   background-color: rebeccapurple;
   border-radius: 5px;
   border: none;
-  color: #fff;
+  color: #dadce0;
   margin: 1rem;
   padding: 1.5rem 3rem;
   font-size: 1.2rem;
